--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@ document.write(password());
 </SCRIPT>
   </head>
   <body>
-    <p>Hi!你<strong>已经</strong>进入云盘！</p>
+    <h1>陈德林的<strong>私人专属</strong>云盘</h1>
+    <h2>在网址后加入<code>/</code>和文件提取口令即可提取文件。</h2>
+    <h2><strong>例如：</strong></h2>
+    <h2>提取文件口令为<code>1234</code>，则输入以下网址：</h2>
+    <h2><code>https://dansmartcloud.github.io/U/1234</code></h2>
   </body>
 </html>
 <!--©DANSmartCloud2022-->
